"fixed admin header layout issues"
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@1289 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/templates/joomla_admin/css/template_css.css
+++ b/administrator/templates/joomla_admin/css/template_css.css
@@ -179,8 +179,8 @@ INPUT, TEXTAREA, SELECT {
 }
 table.menubar {
 	width: 100%;
+	
 }
-
 td {
 	font-size: 11px;
 }
@@ -424,16 +424,12 @@ form {
 	border-bottom: 1px solid #cccccc;
 
 }
-.menudottedline {
+td.menudottedline {
 	border-bottom: 1px solid #cccccc;
 	border-top: 1px solid #ffffff;
 	background-color: #F1F3F5;
-}
-
-.menudottedline td {
 	padding-right: 10px;
 }
-
 .pathway {
 	margin-left: 15px;
 }
